fix: llm issues
